--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+    "parser": "babel-eslint",
     "env": {
         "browser": true,
         "node": true,
@@ -10,7 +11,7 @@
         "ecmaFeatures": {
             "jsx": true
         },
-        "ecmaVersion": 6,
+        "ecmaVersion": 2018,
         "sourceType": "module"
     },
     "plugins": [
@@ -52,7 +53,7 @@
         "react/no-find-dom-node": 0,
         "react/no-is-mounted": 2,
         "react/no-unknown-property": 2,
-        "react/prop-types": 2,
+        "react/prop-types": 0,
         "react/react-in-jsx-scope": 2,
         "react/require-render-return": 2
     }
