--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "query-string": "^6.2.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-loading": "^2.0.3",
     "react-redux": "^5.0.7",
     "react-scripts": "2.0.5",
     "redux": "^4.0.1",
