--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-loading": "^2.0.3",
     "react-redux": "^5.0.7",
     "react-scripts": "2.0.5",
+    "recharts": "^1.3.4",
     "redux": "^4.0.1",
     "redux-first-router": "^2.0.7",
     "redux-first-router-link": "^1.4.2",
