--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "redux": "^4.0.1",
     "redux-first-router": "^2.0.7",
     "redux-first-router-link": "^1.4.2",
+    "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
