--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "gh-pages": "^2.0.1",
+    "react-test-renderer": "^16.5.2",
+    "redux-mock-store": "^1.5.3"
   }
 }
